Header for authentication changed Document publish function implemented